// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Status > statusToIcon > displays start and end dates if both are provided 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > does not display a end date if none was provided 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > does not display a start date if none was provided 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > does not display any dates if neither was provided 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles CACHED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      style="display: flex; height: 100%; flex-direction: column; justify-content: space-between;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <div>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles ERROR phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(213, 0, 0); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles FAILED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(213, 0, 0); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles OMITTED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles PENDING phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(154, 160, 166); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
      <path
        d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles RUNNING phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="#4285f4"
        fill-rule="nonzero"
        transform="translate(-450, -307)"
      >
        <g
          transform="translate(450, 266)"
        >
          <g
            transform="translate(0, 41)"
          >
            <path
              d="M9,4 C6.23857143,4 4,6.23857143 4,9 C4,11.7614286 6.23857143,14 9,14
                C11.7614286,14 14,11.7614286 14,9 C14,8.40214643 13.8950716,7.8288007
                13.702626,7.29737398 L15.2180703,5.78192967 C15.7177126,6.74539838
                16,7.83973264 16,9 C16,12.866 12.866,16 9,16 C5.134,16 2,12.866 2,9 C2,5.134
                5.134,2 9,2 C10.933,2 12.683,2.7835 13.94975,4.05025 L12.7677679,5.23223214
                L9,9 L9,4 Z"
            />
          </g>
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles SKIPPED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles SUCCEEDED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles TERMINATED phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <g
          transform="translate(-1.000000, -1.000000)"
        >
          <polygon
            points="0 0 18 0 18 18 0 18"
          />
          <path
            d="M8.9925,1.5 C4.8525,1.5 1.5,4.86 1.5,9 C1.5,13.14 4.8525,16.5 8.9925,16.5
              C13.14,16.5 16.5,13.14 16.5,9 C16.5,4.86 13.14,1.5 8.9925,1.5 Z M9,15 C5.685,15
              3,12.315 3,9 C3,5.685 5.685,3 9,3 C12.315,3 15,5.685 15,9 C15,12.315 12.315,15 9,15 Z"
            fill="#80868b"
            fill-rule="nonzero"
          />
          <polygon
            fill="#80868b"
            fill-rule="nonzero"
            points="6 6 12 6 12 12 6 12"
          />
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles TERMINATING phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="#4285f4"
        fill-rule="nonzero"
        transform="translate(-450, -307)"
      >
        <g
          transform="translate(450, 266)"
        >
          <g
            transform="translate(0, 41)"
          >
            <path
              d="M9,4 C6.23857143,4 4,6.23857143 4,9 C4,11.7614286 6.23857143,14 9,14
                C11.7614286,14 14,11.7614286 14,9 C14,8.40214643 13.8950716,7.8288007
                13.702626,7.29737398 L15.2180703,5.78192967 C15.7177126,6.74539838
                16,7.83973264 16,9 C16,12.866 12.866,16 9,16 C5.134,16 2,12.866 2,9 C2,5.134
                5.134,2 9,2 C10.933,2 12.683,2.7835 13.94975,4.05025 L12.7677679,5.23223214
                L9,9 L9,4 Z"
            />
          </g>
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles an undefined phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > handles an unknown phase 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: CACHED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div
      style="display: flex; height: 100%; flex-direction: column; justify-content: space-between;"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root"
        focusable="false"
        style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
        />
      </svg>
      <div>
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root"
          focusable="false"
          style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 8l-4 4h3c0 3.31-2.69 6-6 6-1.01 0-1.97-.25-2.8-.7l-1.46 1.46C8.97 19.54 10.43 20 12 20c4.42 0 8-3.58 8-8h3l-4-4zM6 12c0-3.31 2.69-6 6-6 1.01 0 1.97.25 2.8.7l1.46-1.46C15.03 4.46 13.57 4 12 4c-4.42 0-8 3.58-8 8H1l4 4 4-4H6z"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: ERROR 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(213, 0, 0); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: FAILED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(213, 0, 0); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-2h2v2zm0-4h-2V7h2v6z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: OMITTED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zM4 12c0-4.42 3.58-8 8-8 1.85 0 3.55.63 4.9 1.69L5.69 16.9C4.63 15.55 4 13.85 4 12zm8 8c-1.85 0-3.55-.63-4.9-1.69L18.31 7.1C19.37 8.45 20 10.15 20 12c0 4.42-3.58 8-8 8z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: PENDING 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(154, 160, 166); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
      <path
        d="M12.5 7H11v6l5.25 3.15.75-1.23-4.5-2.67z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: RUNNING 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="#4285f4"
        fill-rule="nonzero"
        transform="translate(-450, -307)"
      >
        <g
          transform="translate(450, 266)"
        >
          <g
            transform="translate(0, 41)"
          >
            <path
              d="M9,4 C6.23857143,4 4,6.23857143 4,9 C4,11.7614286 6.23857143,14 9,14
                C11.7614286,14 14,11.7614286 14,9 C14,8.40214643 13.8950716,7.8288007
                13.702626,7.29737398 L15.2180703,5.78192967 C15.7177126,6.74539838
                16,7.83973264 16,9 C16,12.866 12.866,16 9,16 C5.134,16 2,12.866 2,9 C2,5.134
                5.134,2 9,2 C10.933,2 12.683,2.7835 13.94975,4.05025 L12.7677679,5.23223214
                L9,9 L9,4 Z"
            />
          </g>
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: SKIPPED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M6 18l8.5-6L6 6v12zM16 6v12h2V6h-2z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: SUCCEEDED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(52, 168, 83); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
      />
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: TERMINATED 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="none"
        fill-rule="evenodd"
        stroke="none"
        stroke-width="1"
      >
        <g
          transform="translate(-1.000000, -1.000000)"
        >
          <polygon
            points="0 0 18 0 18 18 0 18"
          />
          <path
            d="M8.9925,1.5 C4.8525,1.5 1.5,4.86 1.5,9 C1.5,13.14 4.8525,16.5 8.9925,16.5
              C13.14,16.5 16.5,13.14 16.5,9 C16.5,4.86 13.14,1.5 8.9925,1.5 Z M9,15 C5.685,15
              3,12.315 3,9 C3,5.685 5.685,3 9,3 C12.315,3 15,5.685 15,9 C15,12.315 12.315,15 9,15 Z"
            fill="#80868b"
            fill-rule="nonzero"
          />
          <polygon
            fill="#80868b"
            fill-rule="nonzero"
            points="6 6 12 6 12 12 6 12"
          />
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: TERMINATING 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      height="18"
      viewBox="0 0 18 18"
      width="18"
    >
      <g
        fill="#4285f4"
        fill-rule="nonzero"
        transform="translate(-450, -307)"
      >
        <g
          transform="translate(450, 266)"
        >
          <g
            transform="translate(0, 41)"
          >
            <path
              d="M9,4 C6.23857143,4 4,6.23857143 4,9 C4,11.7614286 6.23857143,14 9,14
                C11.7614286,14 14,11.7614286 14,9 C14,8.40214643 13.8950716,7.8288007
                13.702626,7.29737398 L15.2180703,5.78192967 C15.7177126,6.74539838
                16,7.83973264 16,9 C16,12.866 12.866,16 9,16 C5.134,16 2,12.866 2,9 C2,5.134
                5.134,2 9,2 C10.933,2 12.683,2.7835 13.94975,4.05025 L12.7677679,5.23223214
                L9,9 L9,4 Z"
            />
          </g>
        </g>
      </g>
    </svg>
  </div>
</DocumentFragment>
`;

exports[`Status > statusToIcon > renders an icon with tooltip for phase: UNKNOWN 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root"
      data-testid="node-status-sign"
      focusable="false"
      style="color: rgb(95, 99, 104); height: 18px; width: 18px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 17h-2v-2h2v2zm2.07-7.75l-.9.92C13.45 12.9 13 13.5 13 15h-2v-.5c0-1.1.45-2.1 1.17-2.83l1.24-1.26c.37-.36.59-.86.59-1.41 0-1.1-.9-2-2-2s-2 .9-2 2H8c0-2.21 1.79-4 4-4s4 1.79 4 4c0 .88-.36 1.68-.93 2.25z"
      />
    </svg>
  </div>
</DocumentFragment>
`;
